Added backend -tests
